# MyGameEngine

./: .gitmodules  CMakeLists.txt  README.md  build-with-clang.bat  build.bat  build_crossguid.bat  build_libpng.bat  build_opengex.bat  build_zlib.bat
Asset/Scene/: cube.ogex
Empty/: EmptyApplication.cpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.hpp  Image.cpp  Image.hpp  MemoryManager.cpp  MemoryManager.hpp  Mesh.hpp  SceneManager.cpp  SceneManager.hpp  SceneObject.hpp  cbuffer.h  main.cpp  portable.hpp  shader_base.h
Framework/GeomMath/: geommath.hpp
Framework/GeomMath/include/: AddByElement.h  CrossProduct.h  MulByElement.h  Normalize.h  SubByElement.h  Transform.h  Transpose.h
Framework/GeomMath/ispc/: Normalize.ispc
Framework/Interface/: IApplication.hpp  ImageParser.hpp  SceneParser.hpp
Framework/Parser/: BMP.hpp  OGEX.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.hpp
Platform/Linux/: helloengine_xcb.c
Platform/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.hpp  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_opengl.cpp  helloengine_win.c
RHI/D3d/: D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
RHI/OpenGL/: OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
Test/: OgexParserTest.cpp
